# churros-graphs

./: .gitignore  .gitlab-ci.yml  .graphqlrc.yaml  graph.dot  pyproject.toml
churros_graphs/: main.py
public/: index.html
